# cookbook

./: .gitignore  BRIEF.md  README.md  data-audit.md  live-audit.md
data/: front-matter.json  graph.json  ingredient-matcher.json  ingredients.json  recipes.json  regions.json  sections.json  (+1 more)
pipeline/: README.md  pyproject.toml  requirements.txt  run.py
pipeline/data/: image-overrides.yml  ingredient-matcher.yml  region-queries.yml
pipeline/scripts/: fetch_images.py
pipeline/src/cookbook_pipeline/: __main__.py  paths.py  schema.py
pipeline/src/cookbook_pipeline/llm/: client.py  images.py  prompts.py
pipeline/src/cookbook_pipeline/stages/: image_dedup.py  image_sources.py  ingredient_matcher.py  stage_0_extract.py  stage_10_emit.py  stage_11_glossary.py  stage_1_sections.py  stage_2_front_matter.py  stage_3_segment.py  stage_4_clean.py  stage_5_xrefs.py  stage_6_intros.py  stage_7_picks.py  stage_8_indexes.py  stage_9_fetch_images.py  stage_9_images.py
pipeline/src/cookbook_pipeline/utils/: text.py
pipeline/tests/: conftest.py  test_image_dedup.py  test_image_sources.py  test_ingredient_matcher.py  test_llm_client.py  test_schema.py  test_stage_0_extract.py  test_stage_10_emit.py  test_stage_11_glossary.py  test_stage_1_sections.py  test_stage_2_front_matter.py  test_stage_3_segment.py  test_stage_4_clean.py  test_stage_5_xrefs.py  test_stage_6_intros.py  test_stage_7_picks.py  test_stage_8_indexes.py  test_stage_9_fetch_images.py  test_utils_text.py
pipeline/tests/fixtures/: mock_clean_response.json  page-035.txt  page-067.txt  page-096.txt  page-097.txt
(+90 files in other folders)
